--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-complete-guide",
-  "homepage": ".",
+  "homepage": "https://sbarannikba.github.io/food-app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
