--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-complete-guide",
+  "name": "food-app",
   "homepage": "https://sbarannikba.github.io/food-app/",
   "version": "0.1.0",
   "private": true,
